fields-iter/tests/ui/enum_union.rs
use fields_iter::FieldsInspect;

#[derive(FieldsInspect)]
enum Foo {}

#[derive(FieldsInspect)]
union Bar {
    _foo: (),
}

fn main() {}
